[project]
name = "get-vector-tiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.41.2",
    "dask>=2025.11.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "gdal==3.11.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "mercantile>=1.2.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "vt2geojson>=0.2.1",
]
